@@ -1,3 +1,9 @@
+2003-02-14  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m-xmas.el (w3m-insert-image): Use `map-extents' instead of
+	`extent-at' repeatedly.
+	(w3m-remove-image): Ditto.
+
 2003-02-05  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* w3m-form.el (w3m-form-submit): Remove `!CURRENT_URL!' from
